<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutAddMedSchedule"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.AddMedicationScheduleFragment">

    <!-- Schedule -->
    <TextView
        android:id="@+id/headlineSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_title"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

    <!-- Start Date -->
    <LinearLayout
        android:id="@+id/layoutAddMedStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewAddMedStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_date_label" />

        <Button
            android:id="@+id/buttonAddMedStartDate"
            style="?attr/materialIconButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_date_picker" />
    </LinearLayout>

    <!-- Duration -->
    <TextView
        android:id="@+id/textViewAddMedDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duration_title" />

    <RadioGroup
        android:id="@+id/radioGroupAddMedDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioDurationContinuous">

        <RadioButton
            android:id="@+id/radioDurationContinuous"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="true"
            android:text="@string/radio_continuous" />

        <RadioButton
            android:id="@+id/radioDurationNumDays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:enabled="true"
            android:text="@string/radio_num_days" />
    </RadioGroup>

    <!-- Number of Days Summary -->
    <LinearLayout
        android:id="@+id/layoutNumDaysSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNumDaysSummaryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_days_summary_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewNumDaysSummaryValue"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/num_days_summary_value"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonEditNumDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit" />
    </LinearLayout>

    <!-- Days -->
    <TextView
        android:id="@+id/textViewAddMedSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days_title" />

    <RadioGroup
        android:id="@+id/radioGroupAddMedSchedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioDaysEveryDay">

        <RadioButton
            android:id="@+id/radioDaysEveryDay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="true"
            android:text="@string/radio_daily" />

        <RadioButton
            android:id="@+id/radioDaysSpecificDays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:enabled="true"
            android:text="@string/radio_specific_days" />

        <RadioButton
            android:id="@+id/radioDaysInterval"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:enabled="true"
            android:text="@string/radio_day_interval" />
    </RadioGroup>

    <!-- Specific Days Summary -->
    <LinearLayout
        android:id="@+id/layoutDaySelectionSummary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDaySelectionSummaryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_selection_summary_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewDaySelectionSummaryValue"
            android:layout_width="84dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="@string/day_selection_summary_value"
            android:textColor="@color/design_default_color_primary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonEditDaySelection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_edit" />
    </LinearLayout>

</LinearLayout>