<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutSpecificDaysDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DaySelectionDialogFragment">

    <TextView
        android:id="@+id/titleSelectDaysDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/specific_days_dialog_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSelectDaysInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/specific_days_dialog_instructions"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleSelectDaysDialog" />


    <LinearLayout
        android:id="@+id/daysCheckboxContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectDaysInstructions">

        <CheckBox
            android:id="@+id/checkboxSunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_sunday" />

        <CheckBox
            android:id="@+id/checkboxMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_monday" />

        <CheckBox
            android:id="@+id/checkboxTuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_tuesday" />

        <CheckBox
            android:id="@+id/checkboxWednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_wednesday" />

        <CheckBox
            android:id="@+id/checkboxThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_thursday" />

        <CheckBox
            android:id="@+id/checkboxFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_friday" />

        <CheckBox
            android:id="@+id/checkboxSaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_saturday" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutSelectedDaysDialogButtons"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daysCheckboxContainer">

        <TextView
            android:id="@+id/buttonCancelDaySelectionDialog"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/design_default_color_primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/buttonSetDaySelectionDialog"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center_vertical|end"
            android:text="@string/set"
            android:textAllCaps="true"
            android:textColor="@color/design_default_color_primary"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>